setup/python/k8s-python-ollama/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-ollama
  labels:
    name: fastapi-ollama
